--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
     "swiper": "^11.2.6",
