--- a/package.json
+++ b/package.json
@@ -14,29 +14,32 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/lodash": "^4.17.16",
     "@types/react-inner-image-zoom": "^3.0.3",
+    "dotenv": "^16.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "next": "15.3.1",
+    "postcss": "^8.5.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
+    "sharp": "^0.34.1",
     "swiper": "^11.2.6",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "supabase": "^2.22.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
