--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/lodash": "^4.17.16",
     "@types/react-inner-image-zoom": "^3.0.3",
+    "@vercel/sdk": "^1.7.4",
     "class-variance-authority": "^0.7.1",
     "critters": "^0.0.23",
     "dotenv": "^16.5.0",
